--- a/doc/Extreme GBM (xgboost).Rmd
+++ b/doc/Extreme GBM (xgboost).Rmd
@@ -72,13 +72,17 @@ run.feature.test=TRUE # process features for test set
 run.train=TRUE # run training set
 ```
 
-Here we compare the same xGBM with different maxium depth of trees
+Here we compare the same xGBM with different maximum depth of trees & maximum number of iterations
 
 ```{r model_setup}
-##### need to experiment with these model_values #####
-model_values <- seq(200, 350, 50)
-model_labels = paste("XGBoost with nrounds =", model_values)
-model_labels
+##### test with different nrounds #####
+model_values <- array(NA, dim=c(2, 6))
+model_values[1, ]<- rep(c(1,3,5), 2) #values for max_depth
+model_values[2, ]<- rep(c(5,10), 3) #values for nrounds
+
+model_values_show = t(model_values)
+colnames(model_values_show) = c("max_depth","nrounds")
+model_values_show
 ```
 
 ### Step 2: import training images class labels.
@@ -132,37 +136,28 @@ source("../lib/test.xgboost.R")
 source("../lib/cross_validation_xgboost.R")
 
 if(run.cv){
-  err_cv <- array(dim=c(length(model_values), 2))
-  for(k in 1:length(model_values)){
+  err_cv <- array(dim=c(dim(model_values)[2], 2))
+  for(k in 1:dim(model_values)[2]){
     cat("k=", k, "\n")
-    err_cv[k,] <- cv.function(feat_train, label_train, model_values[k], K)
+    cat("max_depth=", model_values[1,k], "\n")
+    cat("nrounds=", model_values[2,k], "\n")
+    err_cv[k,] <- cv.function(feat_train, label_train, model_values[1,k], model_values[2,k], K)
+    print(err_cv[k,])
   }
   save(err_cv, file="../output/err_cv_xgboost.RData")
 }
 ```
 
-Visualize cross-validation results. 
-```{r cv_vis}
-if(run.cv){
-  load("../output/err_cv_xgboost.RData")
-  plot(model_values, err_cv[,1], xlab="Iterations", ylab="CV Error",
-       main="Cross Validation Error", type="n", ylim=c(0, 0.25))
-  points(model_values, err_cv[,1], col="blue", pch=16)
-  lines(model_values, err_cv[,1], col="blue")
-  arrows(model_values, err_cv[,1]-err_cv[,2], model_values, err_cv[,1]+err_cv[,2], 
-        length=0.1, angle=90, code=3)
-}
-```
-
-
-* Choose the "best"" parameter value
+* Choose the "best"" parameter value based on graphs above
 ```{r best_model}
+#choose the best hyperparameters for the model
 model_best=model_values[1]
 if(run.cv){
-  model_best <- model_values[which.min(err_cv[,1])]
+  dp_best <- model_values[,which.min(err_cv[,1])][1]
+  nr_best <- model_values[,which.min(err_cv[,1])][2]
 }
 
-par_best <- list(iter=model_best)
+par_best <- list(dp = dp_best, nr = nr_best)
 ```
 
 * Train the model with the entire training set using the selected model (model parameter) via cross-validation.
