--- a/doc/Extreme GBM (xgboost).Rmd
+++ b/doc/Extreme GBM (xgboost).Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Regularized GBM (xgboost)"
 author: "Group 11"
-output: html_document
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -78,7 +80,7 @@ Here we compare the same xGBM with different maximum depth of trees & maximum nu
 ##### test with different nrounds #####
 model_values <- array(NA, dim=c(2, 6))
 model_values[1, ]<- rep(c(1,3,5), 2) #values for max_depth
-model_values[2, ]<- rep(c(5,10), 3) #values for nrounds
+model_values[2, ]<- rep(c(5,20), 3) #values for nrounds
 
 model_values_show = t(model_values)
 colnames(model_values_show) = c("max_depth","nrounds")
@@ -138,19 +140,42 @@ source("../lib/cross_validation_xgboost.R")
 if(run.cv){
   err_cv <- array(dim=c(dim(model_values)[2], 2))
   for(k in 1:dim(model_values)[2]){
-    cat("k=", k, "\n")
+    cat("Session =", k, "\n")
     cat("max_depth=", model_values[1,k], "\n")
     cat("nrounds=", model_values[2,k], "\n")
     err_cv[k,] <- cv.function(feat_train, label_train, model_values[1,k], model_values[2,k], K)
-    print(err_cv[k,])
+    cat("Mean CV Error:", err_cv[k,1], "\n")
+    cat("Standard Deviation of CV Error:", err_cv[k,2], "\n")
+    cat("-----","\n")
   }
   save(err_cv, file="../output/err_cv_xgboost.RData")
 }
 ```
 
-* Choose the "best"" parameter value based on graphs above
+* Since we have experimented with two hyperparameters, we use graphs to visualize hyperparameter choice as below.
+```{r cv_vis}
+if(run.cv){
+  load("../output/err_cv_xgboost.RData")
+  plot(c(1,3,5), err_cv[c(4,2,6),1], xlab="Max_Depth", ylab="Mean CV Error",
+       main="Cross Validation Error when nrounds = 20", type="n", 
+       ylim = c(min(err_cv[c(4,2,6),1])*0.90, max(err_cv[c(4,2,6),1])*1.1))
+  points(c(1,3,5), err_cv[c(4,2,6),1], col="blue", pch=16)
+  lines(c(1,3,5), err_cv[c(4,2,6),1], col="blue")
+  arrows(c(1,3,5), err_cv[c(4,2,6),1]-err_cv[c(4,2,6),2], c(1,3,5), err_cv[c(4,2,6),1]+err_cv[c(4,2,6),2], 
+        length=0.1, angle=90, code=3)
+  
+  points(c(1,3,5), err_cv[c(1,5,3),1], col="red", pch=16)
+  lines(c(1,3,5), err_cv[c(1,5,3),1], col="red")
+  arrows(c(1,3,5), err_cv[c(1,5,3),1]-err_cv[c(1,5,3),2], c(1,3,5), err_cv[c(1,5,3),1]+err_cv[c(1,5,3),2], 
+        length=0.1, angle=90, code=3)
+  
+  legend("bottomright", legend=c("nrounds = 5","nrounds = 20"), lty = 1, col=c("red","blue"))
+}
+```
+
+* Choose the "best" parameter values based on mean CV error
+
 ```{r best_model}
-#choose the best hyperparameters for the model
 model_best=model_values[1]
 if(run.cv){
   dp_best <- model_values[,which.min(err_cv[,1])][1]
@@ -191,7 +216,6 @@ if(run.test){
 Prediction performance matters, so does the running times for constructing features and for training the model, especially when the computation resource is limited. 
 ```{r running_time}
 cat("Time for constructing training features=", tm_feature_train[1], "s \n")
-cat("Time for constructing testing features=", tm_feature_test[1], "s \n")
 cat("Time for training model=", tm_train[1], "s \n")
 cat("Time for super-resolution=", tm_test[1], "s \n")
 ```
